--- a/.github/workflows/add_issue_to_bug_board.yml
+++ b/.github/workflows/add_issue_to_bug_board.yml
@@ -12,4 +12,4 @@ jobs:
         with:
           project: Bugs
           column: Needs triage
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ secrets.ORG_PROJECT_GITHUB_TOKEN }}
