--- a/.github/workflows/add_issue_to_bug_board.yml
+++ b/.github/workflows/add_issue_to_bug_board.yml
@@ -8,7 +8,7 @@ jobs:
   assign-issue-to-board:
     runs-on: ubuntu-latest
     steps:
-      - uses: takanabe/github-actions-automate-projects:v0.0.2
+      - uses: docker://takanabe/github-actions-automate-projects:v0.0.2
         env:
           GITHUB_TOKEN: ${{ secrets.ORG_PROJECT_GITHUB_TOKEN }}
           GITHUB_PROJECT_URL: https://github.com/orgs/TractorZoom/projects/4
